[package]
name = "rhino"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rhino is an open-source job queue library. It ships as a Rust crate that drops into any project. No broker, no sidecar, no managed service, no signup. The only dependency is a Postgres database — which most backend teams already have."
repository = "https://github.com/prasdud/rhino"
keywords = ["job", "queue", "durable", "rust"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.8"
sha2 = "0.10"
flate2 = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "stress_test"
path = "scripts/stress_test.rs"

[[bin]]
name = "v0_1_master_tester"
path = "scripts/v0.1-master-tester.rs"
